--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,15 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: PETA
-  role: Volunteer
-  year: 2001 &mdash; 2010
-  url: https://www.peta.org/
-  summary: Organized fund drives and participated in fundraising events for the benefit of PETA's local Springfield operations.
+- organization: Lab3 e.V.
+  role: Member
+  year: 2019 &mdash; 2020
+  url: https://lab3.org/
+  summary: Lab3 is a technology club for networking and working on common projects.
 
 
-- organization: Yale Amnesty International
-  role: Communications coordinator
-  year: 2002 &mdash; 2004
-  url: http://campuspress.yale.edu/amnesty/
-  summary: During my junion and senior years at Yale, I was actively involved in Yale Amnesty International where I helped facilitate our student organization communications through website maintenance, writing for our campus publication, and graphic design of related materials.
+- organization: Digital Retro Park e.V.
+  role: Member
+  year: 2020 &mdash; 2020
+  url: https://digitalretropark.de/
+  summary: Just this year, I joined the Digital Retro Park club in Offenbach, which is dedicated to keeping retro computing knowledge alive and flourishing.
