--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,17 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Master of Arts, Linguistic and Literary Computing
+  uni: Technische Universität Darmstadt
+  year: 2017 &mdash; 2021
+  # awards:
+  #   - award: Summa Cumme Laude graduate
+  # summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: Bachelor of Arts, English and Spanish Literature and Linguistics
+  uni: Humboldt Universität Berlin
+  year: 2014 &mdash; 2017
+  # award: Most likely to succeed
+  # summary: You can choose to have either a single or multiple awards
+
+- degree: Gesellenbrief, Maler und Lackierer
+  uni: Wilhelm-Ostwald-Schule, MaLack GmbH
+  year: 2011 &mdash; 2014
