--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,10 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: Eagle Scout, 
+  organization: Scouts, B.S.A.
+  year: "2003"
+  summary: Highest rank of the American scouting program, awarded for leadership and organizational skills culminating in the coordinating of a community service project.
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+# - award: Most Likely To Succeed
+#   organization: Springfield High School
+#   year: 2004
+#   summary: Voted Most Likely To Succeed by a panel of my high school peers.
