--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ sass:
   style: compressed
 
 # Resume settings
-resume_avatar:                  "true"
+resume_avatar:                  "false"
 resume_name:                    "Brian Junker-Latocha"
 resume_title:                   "Consultant for Voice and Language Technology, Consetto GmbH"
 
@@ -29,7 +29,7 @@ resume_header_intro: ""
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+resume_looking_for_work:        "no"
 
 # Decide which sections to use
 # comment out to hide
