--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ sass:
   style: compressed
 
 # Resume settings
-resume_avatar:                  "false"
+resume_avatar:                  "true"
 resume_name:                    "Brian Junker-Latocha"
 resume_title:                   "Consultant for Voice and Language Technology, Consetto GmbH"
 
@@ -18,9 +18,9 @@ resume_contact_email:           "brian@thejunkyard.cc"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       ""
-resume_contact_address:         "Greater Frankfurt, Germany"
+resume_contact_address:         "Greater Frankfurt Area, Germany"
 
-resume_header_contact_info:     "Greater Frankfurt, Germany • brian@thejunkyard.cc"
+resume_header_contact_info:     "Greater Frankfurt Area, Germany • brian@thejunkyard.cc"
 display_header_contact_info:    "true"
 
 resume_header_intro: ""
