--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,5 +1,5 @@
 # Recognitions
-- award: Eagle Scout, 
+- award: Eagle Scout 
   organization: Scouts, B.S.A.
   year: "2003"
   summary: Highest rank of the American scouting program, awarded for leadership and organizational skills culminating in the coordinating of a community service project.
