--- a/_data/education.yml
+++ b/_data/education.yml
@@ -7,7 +7,7 @@
   # summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: Bachelor of Arts, English and Spanish Literature and Linguistics
-  uni: Humboldt Universität Berlin
+  uni: Humboldt Universität zu Berlin
   year: 2014 &mdash; 2017
   # award: Most likely to succeed
   # summary: You can choose to have either a single or multiple awards
