--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -2,7 +2,7 @@
 - award: Eagle Scout 
   organization: Scouts, B.S.A.
   year: "2003"
-  summary: Highest rank of the American scouting program, awarded for leadership and organizational skills culminating in the coordinating of a community service project.
+  summary: Highest rank of the American scouting program, awarded for leadership and organizational skills culminating in the coordination of a community service project.
 
 # - award: Most Likely To Succeed
 #   organization: Springfield High School
