--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,12 +4,9 @@
   position: Consultant for Voice and Language Technology
   duration: Feb, 2018 &mdash; Present
   summary:
-    - Computational Linguistics Consultant for NLU of a Voice Assistant
-
-    - Shopware Integration for Amazon Alexa
-
-    - Frizz-Magazin Integration for Amazon Alexa
-    
+    - Computational Linguistics Consultant for NLU of a Voice Assistant</br>
+    - Shopware Integration for Amazon Alexa</br>
+    - Frizz-Magazin Integration for Amazon Alexa</br>
     - Development of other B2B Alexa Skills
 # Director of Digital Stratgy
 - company: helga.io GmbH
