--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,12 @@
 # Skills
 # Organizational leadership
-- skill: English
-  description: Native Speaker (US)
+- skill: Languages
+  description: "English: Native speaker (US), German: Native fluency, Spanish: C1 level"
 
-# Communications strategy
-- skill: German
-  description: Native fluency
+# # Communications strategy
+- skill: Citizenship
+  description: "German, American, Irish, British"
 
-# Digital content development and creation
-- skill: Spanish
-  description: C1
+# # Digital content development and creation
+# - skill: Spanish
+#   description: C1
