--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,9 +5,7 @@
   duration: Feb, 2018 &mdash; Present
   summary:
     - Computational Linguistics Consultant for NLU of a Voice Assistant</br>
-    - Shopware Integration for Amazon Alexa</br>
-    - Frizz-Magazin Integration for Amazon Alexa</br>
-    - Development of other B2B Alexa Skills
+    - Coordination of Voice App Development
 # Director of Digital Stratgy
 - company: helga.io GmbH
   position: CPO
