--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # Organizational leadership
 - skill: Languages
-  description: "English: Native speaker (US), German: Native fluency, Spanish: C1 level"
+  description: "English: Native speaker (US), German: Native level, Spanish: C1 level"
 
 # # Communications strategy
 - skill: Citizenship
