--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,7 @@
 # Jobs
 # VP of Global Communications
 - company: Consetto GmbH
+  url: https://consetto.com
   position: Consultant for Voice and Language Technology
   duration: Feb, 2018 &mdash; Present
   summary:
@@ -11,6 +12,7 @@
     - Development of other B2B Alexa Skills
 # Director of Digital Stratgy
 - company: helga.io GmbH
+  url: https://helga.io
   position: CPO
   duration:  Aug, 2019 &mdash; Sept, 2020
   summary: Harnessing the power of voice to build the smart platform for senior well-being.
