--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,10 +6,10 @@
   duration: Feb, 2018 &mdash; Present
   summary:
     - Computational Linguistics Consultant for NLU of a Voice Assistant</br>
-    - Coordination of Voice App Development</br>
+    - Coordination of B2B Voice App Development</br>
     - Shopware Integration for Amazon Alexa</br>
     - Frizz-Magazin Integration for Amazon Alexa</br>
-    - Development of other B2B Alexa Skills
+   
 # Director of Digital Stratgy
 - company: helga.io GmbH
   url: https://helga.io
