--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,10 +1,10 @@
 # Skills
 # Organizational leadership
 - skill: Languages
-  description: "English: Native speaker (US), German: Native level, Spanish: C1 level"
+  description: "English: Native speaker, German: Native level, Spanish: C1 level"
 
 # # Communications strategy
-- skill: Citizenship
+- skill: Citizenships
   description: "German, American, Irish, British"
 
 # # Digital content development and creation
