edit year of journeyman

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,4 +1,4 @@
-# Skills
+# Localization
 # Organizational leadership
 - skill: Languages
   description: "English: Native speaker, German: Native level, Spanish: C1 level"
