--- a/_data/education.yml
+++ b/_data/education.yml
@@ -12,6 +12,6 @@
   # award: Most likely to succeed
   # summary: You can choose to have either a single or multiple awards
 
-- degree: Journeyman Certification, Painter and Decorator
+- degree: Journeyman Tradesman, Painter and Decorator
   uni: Wilhelm-Ostwald-Schule, MaLack GmbH
   year: 2012 &mdash; 2014
