--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,7 +6,7 @@
   duration: Feb, 2018 &mdash; Present
   summary:
     - Computational Linguistics Consultant for NLU of a Voice Assistant</br>
-    - Coordination of B2B Voice App Development</br>
+    - Orchestration of B2B Voice App Development</br>
     - Shopware Integration for Amazon Alexa</br>
     - Frizz-Magazin Integration for Amazon Alexa</br>
    
