--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Brian Junker-Latocha"
-resume_title:                   "Consultant for Voice and Language Technology</br>Consetto GmbH"
+resume_title:                   "Consultant for Voice and Language Technology,</br>Consetto GmbH"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "brian@thejunkyard.cc"
