--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -13,3 +13,9 @@
   year: 2020 &mdash; 2020
   url: https://digitalretropark.de/
   summary: Just this year, I joined the Digital Retro Park club in Offenbach, which is dedicated to keeping retro computing knowledge alive and flourishing.
+
+- organization: Americans in Germany
+  role: Organizer
+  year: 2020 &mdash; 2020
+  url: https://americansingermany.club/
+  summary: Americans in Germany is a Slack and Meetup.com group for networking with Americans in the Rhine-Main area. I coordinate regular events and collaborate closely with the Democrats Abroad Frankfurt.
