--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -14,7 +14,7 @@
   url: https://digitalretropark.de/
   summary: Just this year, I joined the Digital Retro Park club in Offenbach, which is dedicated to keeping retro computing knowledge alive and flourishing.
 
-- organization: Americans in Germany
+- organization: americansingermany.club
   role: Organizer
   year: 2020 &mdash; 2020
   url: https://americansingermany.club/
