--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Folk music
-- description: Writing
+- description: Playing folk music
+- description: Making new contacts
 - description: Arduino, ESP and Raspberry Pi
