--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
   position: Consultant for Voice and Language Technology
   duration: Feb, 2018 &mdash; Present
   summary:
-    - Computational Linguistics Consultant for NLU of a European Voice Assistant</br>
+    - Computational Linguistics Consulting for NLU of a European Voice Assistant</br>
     - Orchestration of B2B Voice App Development</br>
     - Shopware Integration for Amazon Alexa</br>
     - Frizz-Magazin Integration for Amazon Alexa</br>
