--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -3,19 +3,19 @@
 
 - organization: Lab3 e.V.
   role: Member
-  year: 2019 &mdash; 2020
+  year: 2019 &mdash; Present
   url: https://lab3.org/
   summary: Lab3 is a technology club for networking and working on common projects.
 
 
 - organization: Digital Retro Park e.V.
   role: Member
-  year: 2020 &mdash; 2020
+  year: 2020 &mdash; Present
   url: https://digitalretropark.de/
   summary: Just this year, I joined the Digital Retro Park club in Offenbach, which is dedicated to keeping retro computing knowledge alive and flourishing.
 
 - organization: americansingermany.club
   role: Organizer
-  year: 2020 &mdash; 2020
+  year: 2020 &mdash; Present
   url: https://americansingermany.club/
   summary: Americans in Germany is a Slack and Meetup.com group for networking with Americans in the Rhine-Main area. I coordinate regular events and collaborate closely with the Democrats Abroad Frankfurt.
