--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -4,7 +4,6 @@
   year: "2003"
   summary: Highest rank of the American scouting program, awarded for leadership and organizational skills culminating in the coordination of a community service project.
 
-# - award: Most Likely To Succeed
-#   organization: Springfield High School
-#   year: 2004
-#   summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Immigration to Europe
+  year: 2008
+  summary: After spending a semester abroad in Spain and a summer in Germany in 2008, I decided to sever ties with the United States and become a European. It's taken me down many interesting paths and I've never regretted it.
