--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -5,5 +5,6 @@
   summary: Highest rank of the American scouting program, awarded for leadership and organizational skills culminating in the coordination of a community service project.
 
 - award: Immigration to Europe
-  year: 2008
-  summary: After spending a semester abroad in Spain and a summer in Germany in 2008, I decided to sever ties with the United States and become a European. It's taken me down many interesting paths and I've never regretted it.
+  organization: Solo
+  year: "2008"
+  summary: After spending a semester abroad in Spain and a summer in Germany in 2008, I decided to sever ties with the United States and become a European. It's taken me down many interesting paths, and I've never regretted it.
