--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -7,4 +7,4 @@
 - award: Immigration to Europe
   organization: Solo
   year: "2008"
-  summary: After spending a semester abroad in Spain and a summer in Germany in 2008, I decided to sever ties with the United States and become a European. It's taken me down many interesting paths, and I've never regretted it.
+  summary: After spending a semester abroad in Spain and a summer in Germany in 2008, I decided to sever ties with the United States and become a European. It's taken me down many interesting paths, and I haven't regretted it.
