--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -12,7 +12,7 @@
   role: Member
   year: 2020 &mdash; Present
   url: https://digitalretropark.de/
-  summary: Just this year, I joined the Digital Retro Park club in Offenbach, which is dedicated to keeping retro computing knowledge alive and flourishing.
+  summary: Just last year I joined the Digital Retro Park club in Offenbach, which is dedicated to keeping retro computing knowledge alive and flourishing.
 
 - organization: americansingermany.club
   role: Organizer
