--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -14,8 +14,8 @@
   url: https://digitalretropark.de/
   summary: Just last year I joined the Digital Retro Park club in Offenbach, which is dedicated to keeping retro computing knowledge alive and flourishing.
 
-- organization: americansingermany.club
+- organization: americansingermany.org
   role: Organizer
   year: 2020 &mdash; Present
-  url: https://americansingermany.club/
+  url: https://americansingermany.org/
   summary: Americans in Germany is a Slack and Meetup.com group for networking with Americans in the Rhine-Main area. I coordinate regular events and collaborate closely with the Democrats Abroad Frankfurt.
