--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -18,4 +18,4 @@
   role: Organizer
   year: 2020 &mdash; Present
   url: https://americansingermany.org/
-  summary: Americans in Germany is a Slack and Meetup.com group for networking with Americans across the country. I coordinate regular events and collaborate closely with the Democrats Abroad Frankfurt.
+  summary: Americans in Germany is a Slack and Meetup.com group for networking with Americans across the country.
