--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -14,7 +14,7 @@
 - company: helga.io GmbH
   url: https://helga.io
   position: CPO
-  duration:  Aug, 2019 &mdash; Present
+  duration:  Aug, 2019 &mdash; Aug, 2020
   summary: Harnessing the power of voice to build the smart platform for senior well-being.
 
 
