add thesis title

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,7 @@
   year: 2017 &mdash; 2021
   # awards:
   #   - award: Summa Cumme Laude graduate
-  # summary: If you had any meaningful roles at college, feel free to write about them here
+  summary: "Working title of thesis: Evaluating NLP Systems: Linguistic Cognition, NLU and Task-Based Testing"
 
 - degree: Bachelor of Arts, English and Spanish Literature and Linguistics
   uni: Humboldt Universität zu Berlin
