change thesis intro

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,7 @@
   year: 2017 &mdash; 2021
   # awards:
   #   - award: Summa Cumme Laude graduate
-  summary: "Working title of thesis: Evaluating NLP Systems: Linguistic Cognition, NLU and Task-Based Testing"
+  summary: "Coming thesis: Evaluating NLP Systems: Linguistic Cognition, NLU and Task-Based Testing"
 
 - degree: Bachelor of Arts, English and Spanish Literature and Linguistics
   uni: Humboldt Universität zu Berlin
