--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 - company: Consetto GmbH
   url: https://consetto.com
   position: Consultant for Voice and Language Technology
-  duration: Feb, 2018 &mdash; Present
+  duration: Feb. 2018 &mdash; Present
   summary:
     - Computational Linguistics Consulting for NLU of a European Voice Assistant</br>
     - Orchestration of B2B Voice App Development</br>
@@ -14,7 +14,7 @@
 - company: helga.io GmbH
   url: https://helga.io
   position: CPO
-  duration:  Aug, 2019 &mdash; Aug, 2020
+  duration:  Aug. 2019 &mdash; Aug. 2020
   summary: Harnessing the power of voice to build the smart platform for senior well-being.
 
 
