--- a/_data/education.yml
+++ b/_data/education.yml
@@ -20,5 +20,5 @@
 - degree: (Partial) Bachelor’s of Arts in Opera and International Studies
   uni: University of Miami
   year: 2006 &mdash; 2008
-  summary: "Semester abroad studying international politics at Universidad de Granada, quite program to pursue dream of moving to Europe"
+  summary: "Semester abroad studying international politics at Universidad de Granada, left program to pursue dream of moving to Europe"
 
