--- a/_data/education.yml
+++ b/_data/education.yml
@@ -10,7 +10,8 @@
   uni: Humboldt Universität zu Berlin
   year: 2014 &mdash; 2017
   # award: Most likely to succeed
-  # summary: You can choose to have either a single or multiple awards
+  summary: "Thesis: \"The Treatment of the Inflectional Subjunctive Mood in Nineteenth-Century
+American and British Grammars\""
 
 - degree: Journeyman Tradesman, Painter and Decorator
   uni: Wilhelm-Ostwald-Schule, MaLack GmbH
