--- a/_data/education.yml
+++ b/_data/education.yml
@@ -14,7 +14,7 @@
 American and British Grammars\""
 
 - degree: Journeyman Tradesman, Painter and Decorator
-  uni: Wilhelm-Ostwald-Schule, MaLack GmbH
+  uni: Maler- und Lackiererinnung Berlin
   year: 2011 &mdash; 2014
   
   
