--- a/_data/education.yml
+++ b/_data/education.yml
@@ -18,7 +18,7 @@ American and British Grammars\""
   year: 2011 &mdash; 2014
   
   
-- degree: (Partial) Bachelor’s of Arts in Opera and International Studies
+- degree: (Partial) Bachelor of Arts in Opera and International Studies
   uni: University of Miami
   year: 2006 &mdash; 2008
   summary: "Semester abroad studying international politics at Universidad de Granada, left program to pursue dream of moving to Europe"
