--- a/_data/education.yml
+++ b/_data/education.yml
@@ -13,7 +13,7 @@
   summary: "Thesis: \"The Treatment of the Inflectional Subjunctive Mood in Nineteenth-Century
 American and British Grammars\""
 
-- degree: Journeyman Tradesman, Painter and Decorator
+- degree: Journeyman Diploma, Painter and Decorator
   uni: Maler- und Lackiererinnung Berlin
   year: 2011 &mdash; 2014
   
