edit edu and assoc

--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -14,8 +14,8 @@
   url: https://digitalretropark.de/
   summary: Just last year I joined the Digital Retro Park club in Offenbach, which is dedicated to keeping retro computing knowledge alive and flourishing.
 
-- organization: americansingermany.org
+- organization: americancultureclub.org
   role: Organizer
   year: 2020 &mdash; Present
-  url: https://americansingermany.org/
-  summary: Americans in Germany is a Slack and Meetup.com group for networking with Americans across the country.
+  url: https://americancultureclub.org/
+  summary: American Culture Club is a Slack and Meetup.com group for networking with Americans across the country.
