--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Localization
 # Organizational leadership
 - skill: Languages
-  description: "English: Native speaker, German: Native level, Spanish: C1 level"
+  description: "English: native speaker, German: native level, Spanish: C1 level"
 
 # # Communications strategy
 - skill: Citizenships
