--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,7 @@
   year: 2017 &mdash; 2021
   # awards:
   #   - award: Summa Cumme Laude graduate
-  summary: "Coming thesis: \"Evaluating NLP Systems: Task-Based Testing, Cognition and NLU\""
+  summary: "Thesis: \"Evaluating NLP Systems: Task-Based Testing, Cognition and NLU\""
 
 - degree: Bachelor of Arts, English and Spanish Literature and Linguistics
   uni: Humboldt Universität zu Berlin
