--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,17 @@
 # Jobs
+- company: Consileon Business Consultancy GmbH
+  url: https://consileon.de
+  position: Senior Consultant
+  duration: April 2022 &mdash; Present
+  summary:
+    - Requirements Management for Automotive Customers
+    - PO Support and Rollout Management
+
 # VP of Global Communications
 - company: Consetto GmbH
   url: https://consetto.com
   position: Consultant for Voice and Language Technology
-  duration: Feb. 2018 &mdash; Present
+  duration: Feb. 2018 &mdash; March 2022
   summary:
     - Computational Linguistics Consulting for NLU of a European Voice Assistant</br>
     - Orchestration of B2B Voice App Development</br>
