--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,7 +4,7 @@
   position: Senior Consultant
   duration: April 2022 &mdash; Present
   summary:
-    - Requirements Management for Automotive Customers  
+    - Requirements Management for Automotive Customers</br>  
     - PO Support and Rollout Management
 
 # VP of Global Communications
