--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,8 +1,16 @@
 # Jobs
+- company: VUI.agency
+  url: https://vui.agency
+  position: Senior Voice User Interface Architect
+  duration: June 2022 &mdash; Present
+  summary:
+    - Conversational AI Consulting
+
+# Jobs
 - company: Consileon Business Consultancy GmbH
   url: https://consileon.de
   position: Senior Consultant
-  duration: April 2022 &mdash; Present
+  duration: April 2022 &mdash; June 2022
   summary:
     - Requirements Management for Automotive Customers</br>  
     - PO Support and Rollout Management
