--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Brian Junker-Latocha"
-resume_title:                   "Senior Consultant,</br>Consileon Business Consultancy GmbH"
+resume_title:                   "Senior VUI Architect,</br>VUI.agency"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "brian@thejunkyard.cc"
