--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ resume_section_interests:       true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/brianingermany"
-  resume_twitter_url:           "https://twitter.com/JunkerLatocha"
+  # resume_github_url:            "https://github.com/brianingermany"
+  # resume_twitter_url:           "https://twitter.com/JunkerLatocha"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/junker-latocha"
