--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -19,3 +19,9 @@
   year: 2020 &mdash; Present
   url: https://mainandwine.eu
   summary: The English-speaking community for Offenbach and surroundings, meeting regularly for evening events and remote lunchbreaks.
+
+- organization: Pilots Rhein-Main
+  role: Player
+  year: 2022 &mdash; Present
+  url: https://www.pilotsrheinmain.de/
+  summary: Friendly neighborhood baseball team in Offenbach.
