--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Playing folk music
+- description: "Playing folk music (visit <a href='https://briankenneth.rocks'>briankenneth.rocks</a>)"
 - description: Making new contacts
 - description: Arduino, ESP and Raspberry Pi
