--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Jobs
 - company: VUI.agency
   url: https://vui.agency
-  position: Senior Voice User Interface Architect
+  position: Senior Voice Architect
   duration: June 2022 &mdash; Present
   summary:
     - Conversational AI Consulting
