--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ resume_contact_email:           "brian@thejunkyard.cc"
 resume_contact_telephone:       ""
 resume_contact_address:         "Offenbach am Main, Germany"
 
-resume_header_contact_info:     "Offenbach am Main, Germany • brian@thejunkyard.cc"
+resume_header_contact_info:     "Offenbach am Main, Germany"
 display_header_contact_info:    "true"
 
 resume_header_intro: ""
